# atsf4g-co

./: .clang-format  .clang_complete  .gcc-flags.json  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake_clang_analyzer.sh  cmake_dev.bat  cmake_dev.sh  cmake_dev_mbedtls.bat  cmake_dev_openssl.bat  cppcheck.sh
atframework/: CMakeLists.txt  atframework.macro.cmake  atframework.prepare.cmake
atframework/export/: CMakeLists.txt  export.macro.cmake
atframework/export/atgw_inner_v1_c/: CMakeLists.export.txt  CMakeLists.txt  build_android.sh  build_ios.sh  libatgw_inner_v1_c.cpp  libatgw_inner_v1_c.h
atframework/libatapp/: libatapp.cmake
atframework/libatapp/repo/: CMakeLists.txt
atframework/libatapp/repo/include/: include.macro.cmake
atframework/libatapp/repo/include/atframe/: atapp.h  atapp_conf.h  atapp_log_sink_maker.h  atapp_module_impl.h
atframework/libatapp/repo/project/cmake/: ProjectBuildOption.cmake
atframework/libatapp/repo/sample/: CMakeLists.txt  sample.macro.cmake  sample_echo_svr.cpp
atframework/libatapp/repo/sample/sample_etc/: sample_echo_svr.conf  sample_echo_svr.start.sh
atframework/libatapp/repo/src/: CMakeLists.txt
atframework/libatapp/repo/src/atframe/: atapp.cpp  atapp_log_sink_maker.cpp  atapp_module_impl.cpp
atframework/libatbus/: libatbus.cmake
atframework/libatframe_utils/: libatframe_utils.cmake  libatframe_utils.prepare.cmake
atframework/service/: CMakeLists.txt
atframework/service/atgateway/: CMakeLists.txt  atgateway.cpp  session.cpp  session.h  session_manager.cpp  session_manager.h
atframework/service/atgateway/protocols/: libatgw_proto_atbus_ios_cli.h  libatgw_proto_atbus_ios_svr.h  libatgw_server_protocol.h  proto_base.cpp  proto_base.h  proto_impl.cpp  proto_impl.h  session_base.h
atframework/service/atgateway/protocols/inner/: libatgw_proto_inner_config.h
atframework/service/atgateway/protocols/inner_v1/: libatgw_proto_inner.cpp  libatgw_proto_inner.fbs  libatgw_proto_inner.h  libatgw_proto_inner_config.h  libatgw_proto_inner_generated.h
atframework/service/atgateway/session_port/: libuv_session.cpp  libuv_session.h  session_base.h  sock_session.h
atframework/service/atproxy/: CMakeLists.txt  atproxy.cpp  atproxy_manager.cpp  atproxy_manager.h  etcd_module.cpp  etcd_module.h  etcd_v2_module.cpp  etcd_v2_module.h
atframework/service/component/: CMakeLists.txt
atframework/service/component/config/: atframe_service_types.h  atframe_services_build_feature.h.in
atframework/service/component/core/: timestamp_id_allocator.h
atframework/service/component/etcdcli/: etcd_cluster.cpp  etcd_cluster.h  etcd_def.h  etcd_keepalive.cpp  etcd_keepalive.h  etcd_packer.cpp  etcd_packer.h  etcd_watcher.cpp  etcd_watcher.h
atframework/service/component/utility/: random_engine.cpp  random_engine.h
doc/: TODO.md
install/echosvr/etc/: echosvr.conf
install/resource/script/: login.lua
install/tools/script/: config.conf  gen_conf.py
project/cmake/: ProjectBuildOption.cmake  ProjectTools.cmake
sample/: CMakeLists.txt  sample.custom-macro.cmake
sample/atgw_cli_inner_hello/: CMakeLists.txt  hello.cpp
src/: CMakeLists.txt
src/echosvr/: CMakeLists.txt
src/echosvr/app/: echosvr_main.cpp
src/gamesvr/: CMakeLists.txt
src/gamesvr/app/: gamesvr_main.cpp  handle_cs_msg.cpp  handle_cs_msg.h  handle_ss_msg.cpp  handle_ss_msg.h
src/gamesvr/logic/: task_action_ping.cpp  task_action_ping.h  task_action_player_async_jobs.cpp  task_action_player_async_jobs.h  task_action_player_info_get.cpp  task_action_player_info_get.h  task_action_player_kickoff.cpp  task_action_player_kickoff.h  task_action_player_login.cpp  task_action_player_login.h
src/loginsvr/: CMakeLists.txt
src/loginsvr/app/: handle_cs_msg.cpp  handle_cs_msg.h  handle_ss_msg.cpp  handle_ss_msg.h  loginsvr_main.cpp
src/loginsvr/logic/: task_action_login_authorization.cpp  task_action_login_authorization.h
src/server_frame/: CMakeLists.txt  server_frame.cmake
src/server_frame/config/: extern_log_categorize.h  extern_service_types.h  logic_config.cpp  logic_config.h
src/server_frame/data/: player.cpp  player.h  session.cpp  session.h
src/server_frame/dispatcher/: actor_action_base.cpp  actor_action_base.h  actor_action_cs_req_base.cpp  actor_action_cs_req_base.h  actor_action_no_req_base.cpp  actor_action_no_req_base.h  actor_action_ss_req_base.cpp  actor_action_ss_req_base.h  cs_msg_dispatcher.cpp  cs_msg_dispatcher.h  db_msg_dispatcher.cpp  db_msg_dispatcher.h  dispatcher_implement.cpp  dispatcher_implement.h  dispatcher_type_defines.cpp  dispatcher_type_defines.h  ss_msg_dispatcher.cpp  ss_msg_dispatcher.h  task_action_base.cpp  task_action_base.h  task_action_cs_req_base.cpp  task_action_cs_req_base.h  task_action_no_req_base.cpp  task_action_no_req_base.h  task_action_ss_req_base.cpp  task_action_ss_req_base.h  task_manager.cpp  task_manager.h
src/server_frame/logic/: player_manager.cpp  player_manager.h  session_manager.cpp  session_manager.h
src/server_frame/protocol/: .clang-format  generate_proto_source.cmake
src/tools/: CMakeLists.txt
src/tools/etcd-watcher/: CMakeLists.txt  main.cpp
src/tools/simulator/: CMakeLists.txt  main.cpp
src/tools/simulator/libsimulator_uv/: README.md  linenoise.h  simulator_active.cpp  simulator_active.h  simulator_base.cpp  simulator_base.h  simulator_player_impl.cpp  simulator_player_impl.h
src/tools/simulator/lua/cpp/lua_engine/: lua_binding_class.h  lua_binding_mgr.cpp  lua_binding_mgr.h  lua_binding_namespace.h  lua_binding_unwrapper.h  lua_binding_utils.cpp  lua_binding_utils.h  lua_binding_wrapper.h  lua_engine.h
src/tools/simulator/lua/cpp/lua_module/: lua_profile.cpp
src/tools/simulator/lua/lua/: main.lua
src/tools/simulator/lua/lua/data/: conf_manager.lua  pbc_config_manager.lua
src/tools/simulator/lua/lua/utils/: adaptor.lua  class.lua  conf.lua
src/tools/simulator/proto/player/: account.cpp
src/tools/simulator/utility/: client_config.cpp  client_config.h  client_player.cpp  client_player.h  client_simulator.cpp  client_simulator.h
(+87 files in other folders)
